// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--conventional-commits fixed mode should guess prerelease version bumps and generate CHANGELOG 1`] = `
"v2.0.0-alpha.0

HEAD -> main, tag: v2.0.0-alpha.0

CHANGELOG.md
lerna.json
packages/package-1/CHANGELOG.md
packages/package-1/package.json
packages/package-2/CHANGELOG.md
packages/package-2/package.json
packages/package-3/CHANGELOG.md
packages/package-3/package.json
packages/package-4/CHANGELOG.md
packages/package-4/package.json
packages/package-5/CHANGELOG.md
packages/package-5/package.json"
`;

exports[`--conventional-commits fixed mode should use conventional-commits utility to guess version bump and generate CHANGELOG 1`] = `
"v2.0.0

HEAD -> main, tag: v2.0.0

CHANGELOG.md
lerna.json
packages/package-1/CHANGELOG.md
packages/package-1/package.json
packages/package-2/CHANGELOG.md
packages/package-2/package.json
packages/package-3/CHANGELOG.md
packages/package-3/package.json
packages/package-4/CHANGELOG.md
packages/package-4/package.json
packages/package-5/CHANGELOG.md
packages/package-5/package.json"
`;

exports[`--conventional-commits independent should graduate prerelease version bumps and generate CHANGELOG 1`] = `
"Publish

 - package-1@1.0.1
 - package-2@2.1.0
 - package-3@4.0.0
 - package-4@4.1.0
 - package-5@5.0.1

HEAD -> main, tag: package-5@5.0.1, tag: package-4@4.1.0, tag: package-3@4.0.0, tag: package-2@2.1.0, tag: package-1@1.0.1

packages/package-1/CHANGELOG.md
packages/package-1/package.json
packages/package-2/CHANGELOG.md
packages/package-2/package.json
packages/package-3/CHANGELOG.md
packages/package-3/package.json
packages/package-4/CHANGELOG.md
packages/package-4/package.json
packages/package-5/CHANGELOG.md
packages/package-5/package.json"
`;

exports[`--conventional-commits independent should guess prerelease version bumps and generate CHANGELOG 1`] = `
"Publish

 - package-1@1.0.1-alpha.0
 - package-2@2.1.0-alpha.0
 - package-3@4.0.0-beta.0
 - package-4@4.1.0-alpha.0
 - package-5@5.0.1-alpha.0

HEAD -> main, tag: package-5@5.0.1-alpha.0, tag: package-4@4.1.0-alpha.0, tag: package-3@4.0.0-beta.0, tag: package-2@2.1.0-alpha.0, tag: package-1@1.0.1-alpha.0

packages/package-1/CHANGELOG.md
packages/package-1/package.json
packages/package-2/CHANGELOG.md
packages/package-2/package.json
packages/package-3/CHANGELOG.md
packages/package-3/package.json
packages/package-4/CHANGELOG.md
packages/package-4/package.json
packages/package-5/CHANGELOG.md
packages/package-5/package.json"
`;

exports[`--conventional-commits independent should use conventional-commits utility to guess version bump and generate CHANGELOG 1`] = `
"Publish

 - package-1@1.0.1
 - package-2@2.1.0
 - package-3@4.0.0
 - package-4@4.1.0
 - package-5@5.0.1

HEAD -> main, tag: package-5@5.0.1, tag: package-4@4.1.0, tag: package-3@4.0.0, tag: package-2@2.1.0, tag: package-1@1.0.1

packages/package-1/CHANGELOG.md
packages/package-1/package.json
packages/package-2/CHANGELOG.md
packages/package-2/package.json
packages/package-3/CHANGELOG.md
packages/package-3/package.json
packages/package-4/CHANGELOG.md
packages/package-4/package.json
packages/package-5/CHANGELOG.md
packages/package-5/package.json"
`;
